# dirapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
analysis/ghidra/: analysis_dispatch.txt  analysis_entry_points.txt  analysis_ordinal_groups.txt  data_types.txt  exports.txt  imports.txt  lingo_symbol_table.h  strings.txt
analysis/tools/: DecompileAll.java
examples/: build_run_lingo.bat  run_lingo.c
src/: _header.c  _index.txt  dirapi.def  dirapi_functions.h  dirapi_globals.c  dirapi_globals.h  dirapi_pch.h  dirapi_types.h  iml32.def  iml32_imports.h
src/bitmap/: bitmap_castlib.c  bitmap_drawing.c  bitmap_import_export.c  bitmap_movie_stage.c  bitmap_rtf_data.c  bitmap_sprite_props.c  bitmap_text_field.c
src/cast/: cast_api_wrappers.c  cast_bitmap_ops.c  cast_castmember_ops.c  cast_context_access.c  cast_context_mgmt.c  cast_data_table.c  cast_format_convert.c  cast_format_util.c  cast_handler_exec.c  cast_image_convert.c  cast_ink_blend.c  cast_member_resolve.c  cast_member_thunks.c  cast_noise_perlin.c  cast_runtime_init.c  cast_scope_register.c  cast_score_xtra.c  cast_script_ops.c  cast_symbol_generic.c  cast_vector_math.c  cast_xtra_bridge.c  cast_xtra_props.c
src/certificates/: certificates_bytecode.c  certificates_execution.c  certificates_string_core.c  certificates_string_methods.c  certificates_uri_encoding.c
src/core/: core_async.c  core_builtin_funcs.c  core_builtins.c  core_channel_props.c  core_comparison.c  core_data_conversion.c  core_dispatch_action.c  core_dispatch_global.c  core_dispatch_object.c  core_event_handlers.c  core_external_script.c  core_field_dispatch.c  core_field_ops.c  core_member_wrap.c  core_object_alloc.c  core_property_access.c  core_registration.c  core_scripting.c  core_sprite_member.c  core_sprite_member2.c  core_sprite_props.c  core_stack_ops.c  core_symbol_table.c  core_system_ops.c
src/crt/: crt_chunk_io.c  crt_format_errors.c  crt_media_codec.c  crt_movie_api.c  crt_platform_lingo.c  crt_riff_chunk_core.c  crt_script_properties.c  crt_startup_security.c
src/crypto/: crypto_ast_and_parsing.c  crypto_big_eval.c  crypto_big_multiply.c  crypto_decompiler_and_hashtable.c  crypto_evaluate_expr.c  crypto_expression_parsing.c  crypto_primary_and_serialization.c  (+1 more)
src/stage/: stage_gc.c  (+34 more)
(+169 files in other folders)
